2005-03-24  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpplugin.sgml: updated.

2005-03-23  Sven Neumann  <sven@gimp.org>

	* app/app-docs.sgml
	* app/app-sections.txt: updated.

2005-03-03  Sven Neumann  <sven@gimp.org>

	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated.

2005-03-03  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-docs.sgml
	* libgimpbase/libgimpbase-docs.sgml
	* libgimpcolor/libgimpcolor-docs.sgml
	* libgimpconfig/libgimpconfig-docs.sgml
	* libgimpmath/libgimpmath-docs.sgml
	* libgimpmodule/libgimpmodule-docs.sgml
	* libgimpthumb/libgimpthumb-docs.sgml
	* libgimpwidgets/libgimpwidgets-docs.sgml: added several indices,
	one for all symbols, and lists of new symbols for GIMP 2.2 and
	2.4.  For this to work correctly, you need gtk-doc from CVS (see
	bug #168384). But don't worry, you can still build the docs with
	older versions.

2005-03-03  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt: added new function.

	* libgimp/tmpl/gimp.sgml
	* libgimpconfig/tmpl/gimpconfig-params.sgml
	* libgimpwidgets/tmpl/gimppropwidgets.sgml: removed unused
	parameters.

	* libgimp/tmpl/gimpdrawable.sgml
	* libgimp/tmpl/gimpimage.sgml
	* libgimp/tmpl/gimppaths.sgml: regenerated.

2005-03-01  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimpenumcombobox.sgml
	* libgimpwidgets/tmpl/gimpintcombobox.sgml: updated.

2005-02-25  Sven Neumann  <sven@gimp.org>

	* app/app-docs.sgml
	* app/app-sections.txt: updated internal docs.

2005-02-22  Sven Neumann  <sven@gimp.org>

	* libgimp/tmpl/gimpchannel.sgml: regenerated.

2005-02-22  Shlomi Fish   <shlomif@iglu.org.il>

	* libgimp/libgimp-sections.txt: added new function

2005-02-14  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am
	* app/app-docs.sgml
	* app/app-sections.txt: some updates, there's still a lot to do here.

2005-02-12  Sven Neumann  <sven@gimp.org>
